# oxmono

./: .gitignore  README.md  VENDORS.md  dune  dune-project  dune-workspace  root.opam  sources.yaml
avsm/frontmatter/: README.md  dune-project  frontmatter-eio.opam  frontmatter.opam
avsm/frontmatter/lib/: dune  frontmatter.ml  frontmatter.mli
avsm/frontmatter/lib_eio/: dune  frontmatter_eio.ml  frontmatter_eio.mli
avsm/frontmatter/test/: dune  test_frontmatter.ml
avsm/gitops/: dune-project  gitops.opam
avsm/gitops/lib/: dune  gitops.ml
avsm/ocaml-conpool/: dune-project
avsm/ocaml-conpool/lib/: config.mli  connection.ml  conpool.ml  dune
avsm/ocaml-conpool/test/: dune  stress_test.ml
avsm/openapi/: LICENSE.md  OPENAPI_ROADMAP.md  dune-project  openapi.opam
avsm/openapi/lib/: dune  index.mld  openapi.ml  openapi_codegen.ml  openapi_nestjs.ml  openapi_nestjs.mli  openapi_runtime.ml  openapi_spec.ml
avsm/openapi/test/: dune  test_openapi.ml
avsm/oxmono/: dune-project  oxmono.opam
avsm/oxmono/lib/: archive.ml  dune  git.ml  opam_repo.ml  process.ml  source.ml  sources_file.ml  worktree.ml
avsm/srcsetter/: CHANGES.md  README.md  dune-project  srcsetter-cmd.opam  srcsetter-cmd.opam.template  srcsetter.opam
avsm/srcsetter/lib/: dune  srcsetter.ml  srcsetter.mli  srcsetter_cmd.ml  srcsetter_cmd.mli
avsm/typesense/: .gitignore  CHANGES.md  LICENSE.md  README.md  dune  dune-project  dune.inc  typesense.ml  typesense.mli  typesense.opam
avsm/typesense/lib/: client.ml  client.mli  cmd.ml  cmd.mli  dune  error.ml  error.mli  session.ml  session.mli  typesense_auth.ml
avsm/zotero-translation/: README.md  dune-project  zotero-translation.opam
avsm/zotero-translation/lib/: bibtex.ml  bibtex.mli  dune  zotero_translation.ml  zotero_translation.mli
bleeding/atp/: .gitignore  CHANGES.md  LICENSE.md  README.md  atp-lexicon-atproto.opam  atp-lexicon-bsky.opam  atp-lexicon-standard-site.opam  atp-lexicon-tangled.opam  atp-xrpc.opam  atp.opam  bsky.opam  dune-project  hermest-cli.opam  hermest.opam  standard-site.opam  tangled.opam  xrpc-auth.opam
bleeding/atp/xrpc/: dune  xrpc.ml  xrpc.mli  xrpc_client.ml  xrpc_client.mli  xrpc_cred.ml  xrpc_cred.mli  xrpc_error.ml  xrpc_error.mli  xrpc_jwt.ml  xrpc_jwt.mli  xrpc_types.ml  xrpc_types.mli
bleeding/brotli/: .gitignore  OPTIMIZATION_PLAN.md  brotli.opam  dune-project
bleeding/brotli/benchmark/: bench.ml  compare.ml  core_bench_brotli.ml  dune  test_template.ml
bleeding/brotli/bytesrw/: bytesrw_brotli.ml  bytesrw_brotli.mli  dune
bleeding/brotli/src/: bit_reader.ml  bit_writer.ml  block_split.ml  brotli.ml  brotli.mli  brotli_decode.ml  brotli_encode.ml  constants.ml  context.ml  copy_impl.portable.ml  copy_impl.simd.ml  decoder_state.ml  dict_match.ml  dictionary.ml  dune  huffman.ml  lz77.ml  match_impl.portable.ml  match_impl.simd.ml  optimal.ml  oxcaml_arrays.ml  prefix.ml  transform.ml
bleeding/brotli/test/: dune  test_brotli.ml  test_debug.ml  test_unboxed_array.ml
bleeding/brotli/test_dune/: test_template.ml
bleeding/bytesrw-eio/: README.md  bytesrw-eio.opam  dune-project
bleeding/bytesrw-eio/src/: bytesrw_eio.ml  bytesrw_eio.mli  dune
bleeding/bytesrw-eio/test/: dune  test_bytesrw_eio.ml
bleeding/cbort/: README.md  cbort.opam  dune  dune-project
bleeding/cbort/fuzz/: dune  fuzz_cbort.ml  gen_corpus.ml
bleeding/cbort/lib/: cbor.ml  cbor.mli  cbor_rw.ml  cbor_rw.mli  cbort.ml  cbort.mli  dune
bleeding/cbort/test/: dune  test_cbort.ml
bleeding/cbort/test-vectors/: appendix_a.json
bleeding/claude/: claude.opam  dune  dune-project
bleeding/claude/lib/: claude.ml  claude.mli  content_block.ml  dune  err.ml  err.mli  handler.ml  hooks.mli  message.ml  permissions.mli  sdk_control.mli  server_info.ml  server_info.mli  structured_output.mli  tool.ml  tool_input.ml  tool_input.mli
bleeding/claude/proto/: control.mli  hooks.mli  message.ml  message.mli  model.ml  options.mli  permissions.ml  structured_output.mli  unknown.ml
bleeding/claude/test/: camel_jokes.ml  dune  hooks_example.ml  permission_demo.ml  simple_permission_test.ml  structured_output_demo.ml  test_incoming.ml
bleeding/cookeio/: LICENSE.md  README.md  RFC-TODO.md  TODO.md  cookeio.opam  dune-project
bleeding/cookeio/spec/: DOCUMENTATION-IMPROVEMENTS-COMPLETED.md  RFC-DOCUMENTATION-ANALYSIS.md  SUGGESTED-DOCUMENTATION-IMPROVEMENTS.md
bleeding/cookeio/test/: dune  test_cookeio.ml
bleeding/jsonwt/: .gitignore  LICENSE.md  README.md  TODO.md  dune-project  jsonwt.opam
bleeding/jsonwt/fuzz/: dune  fuzz_jsonwt.ml
bleeding/jsonwt/lib/: cwt.ml  cwt.mli  dune  jsonwt.ml  jsonwt.mli
bleeding/jsonwt/test/: dune  test_cbor.ml  test_cwt.ml  test_jsonwt.ml
bleeding/publicsuffix/: README.md  dune-project  publicsuffix.opam
bleeding/publicsuffix/lib/: dune  publicsuffix.ml  publicsuffix.mli  publicsuffix_data.mli
bleeding/publicsuffix/test/: dune  psl_test.ml  publicsuffix.t
bleeding/punycode/: README.md  dune-project  punycode.opam
bleeding/punycode/fuzz/: dune  fuzz_punycode.ml
bleeding/punycode/lib/: dune  punycode.ml  punycode.mli  punycode_idna.ml  punycode_idna.mli
bleeding/punycode/test/: dune  test_punycode.ml
bleeding/requests/: CHANGES.md  README.md  SPEC-TODO.md  dune-project
bleeding/requests/lib/: dune  one.ml  one.mli  requests.ml
bleeding/requests/spec/: rfc1951.txt  rfc9111.txt
bleeding/requests/test/: .httpbin-test-quick-ref.md  README.md  dune  test_h2_connection.ml  test_h2_hpack.ml  test_h2_stream.ml  test_http_date.ml  (+8 more)
bleeding/snappy/: STATUS.md  dune-project  snappy.opam
bleeding/tomlt/: dune-project  tomlt.opam
bleeding/xdge/: CHANGES.md  README.md  dune  dune-project  xdge.opam  xdge.opam.template
bleeding/yamlrw/: .gitignore  CHANGES.md  README.md  dune-project  dune-workspace  yamlrw-eio.opam  yamlrw-unix.opam  yamlrw.opam
bleeding/yamlt/: .gitignore  README.md  dune-project  yamlt.opam
opam/jsont/: dune-project  jsont.opam
opam/ocaml_simd/: .opam-packages  README.md  ocaml_simd.opam
opam/oxcaml_intrinsics/: .opam-packages  README.md  oxcaml_intrinsics.opam
(+1790 files in other folders)
