(lang dune 3.21)
(name gitops)

(generate_opam_files true)

(license ISC)
(authors "Anil Madhavapeddy <anil@recoil.org>")
(maintainers "Anil Madhavapeddy <anil@recoil.org>")
(source (github avsm/oxmono))

(package
 (name gitops)
 (synopsis "Git operations library with Eio and dry-run support")
 (description
  "Gitops provides a context-based API for git operations using Eio.
   Features include dry-run mode for previewing changes, structured
   error handling with Eio.Io context, and reusable sync configuration
   with Cmdliner integration.")
 (depends
  (ocaml (>= 5.2))
  (eio (>= 1.2))
  (eio_main (>= 1.2))
  (tomlt (>= 0.1))
  (cmdliner (>= 1.3))
  (logs (>= 0.7))
  (fmt (>= 0.9))
  (odoc :with-doc)))
