(lang dune 3.21)
(name typesense)

(generate_opam_files true)

(license ISC)
(authors "Anil Madhavapeddy <anil@recoil.org>")
(maintainers "Anil Madhavapeddy <anil@recoil.org>")
(source (tangled anil.recoil.org/ocaml-typesense))

(package
 (name typesense)
 (synopsis "OCaml bindings for the Typesense search API")
 (description
  "High-quality OCaml bindings to the Typesense search API using Eio for async operations. Provides collection management, document operations, search, multi-search, and analytics.")
 (depends
  (ocaml (>= 5.1.0))
  (openapi (>= 0.4.0))
  (eio (>= 1.2))
  (eio_main (>= 1.2))
  (requests (>= 0.3.1))
  (uri (>= 4.4.0))
  (jsont (>= 0.2.0))
  bytesrw
  (ptime (>= 1.0.0))
  ptime-clock-os
  (cmdliner (>= 1.3.0))
  (fmt (>= 0.9.0))
  (logs (>= 0.7.0))
  (odoc :with-doc)
  (alcotest :with-test)))
