(lang dune 3.18)

(name cookeio)

(generate_opam_files true)

(license ISC)
(authors "Anil Madhavapeddy")
(homepage "https://tangled.sh/@anil.recoil.org/ocaml-cookeio")
(maintainers "Anil Madhavapeddy <anil@recoil.org>")
(bug_reports "https://tangled.sh/@anil.recoil.org/ocaml-cookeio/issues")
(documentation "https://tangled.sh/@anil.recoil.org/ocaml-cookeio")
(maintenance_intent "(latest)")

(package
 (name cookeio)
 (synopsis "Cookie parsing and management library")
 (description "Cookeio provides cookie parsing and serialization for OCaml applications. It handles parsing Set-Cookie and Cookie headers with full support for all cookie attributes.")
 (depends
  (ocaml (>= 5.2.0))
  (logs (>= 0.9.0))
  (ptime (>= 1.1.0))
  (ipaddr (>= 5.6.0))
  (domain-name (>= 0.4.0))
  publicsuffix
  eio_main
  (alcotest :with-test)
  (odoc :with-doc)))
