(lang dune 3.20)
(name snappy)
(version 0.1.0)

(generate_opam_files true)

(license ISC)
(authors "Your Name")
(maintainers "your@email.com")
(source (github yourusername/ocaml-snappy))

(package
 (name snappy)
 (synopsis "Pure OCaml implementation of Google's Snappy compression")
 (description "A high-performance, low-allocation pure OCaml implementation of the Snappy compression format.")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  (alcotest (and :with-test (>= 1.7.0)))))
