opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ocaml_simd"
bug-reports: "https://github.com/janestreet/ocaml_simd/issues"
dev-repo: "git+https://github.com/janestreet/ocaml_simd.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ocaml_simd/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.2.0"}
  "base"
  "core"
  "ocaml_intrinsics"
  "ppx_jane"
  "ppx_template"
  "sexplib"
  "unboxed"
  "vec"
  "dune"             {>= "3.17.0"}
  "ppxlib"           {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "SIMD intrinsics supported by the OxCaml compiler."
description: "
 SIMD intrinsics supported by the OxCaml compiler.
"
