opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/oxcaml_intrinsics"
bug-reports: "https://github.com/janestreet/oxcaml_intrinsics/issues"
dev-repo: "git+https://github.com/janestreet/oxcaml_intrinsics.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/oxcaml_intrinsics/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.2.0"}
  "ocaml_intrinsics"
  "ppx_jane"
  "dune"             {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Intrinsics for OxCaml"
description: "
Provides some compiler intrinsics for OxCaml.
"
